@@ -93,7 +93,6 @@ class ClientSession:
                 data=None,
                 headers=None,
                 skip_auto_headers=None,
-                files=None,
                 auth=None,
                 allow_redirects=True,
                 max_redirects=10,
@@ -112,7 +111,6 @@ class ClientSession:
                 data=data,
                 headers=headers,
                 skip_auto_headers=skip_auto_headers,
-                files=files,
                 auth=auth,
                 allow_redirects=allow_redirects,
                 max_redirects=max_redirects,
@@ -129,7 +127,6 @@ class ClientSession:
                  data=None,
                  headers=None,
                  skip_auto_headers=None,
-                 files=None,
                  auth=None,
                  allow_redirects=True,
                  max_redirects=10,
@@ -168,7 +165,7 @@ class ClientSession:
             req = self._request_class(
                 method, url, params=params, headers=headers,
                 skip_auto_headers=skip_headers, data=data,
-                cookies=self.cookies, files=files, encoding=encoding,
+                cookies=self.cookies, encoding=encoding,
                 auth=auth, version=version, compress=compress, chunked=chunked,
                 expect100=expect100,
                 loop=self._loop, response_class=self._response_class)
@@ -488,7 +485,6 @@ def request(method, url, *,
             headers=None,
             skip_auto_headers=None,
             cookies=None,
-            files=None,
             auth=None,
             allow_redirects=True,
             max_redirects=10,
@@ -563,7 +559,6 @@ def request(method, url, *,
                          data=data,
                          headers=headers,
                          skip_auto_headers=skip_auto_headers,
-                         files=files,
                          auth=auth,
                          allow_redirects=allow_redirects,
                          max_redirects=max_redirects,
