@@ -59,7 +59,7 @@ class ClientRequest:
     def __init__(self, method, url, *,
                  params=None, headers=None, skip_auto_headers=frozenset(),
                  data=None, cookies=None,
-                 files=None, auth=None, encoding='utf-8',
+                 auth=None, encoding='utf-8',
                  version=aiohttp.HttpVersion11, compress=None,
                  chunked=None, expect100=False,
                  loop=None, response_class=None):
@@ -86,16 +86,6 @@ class ClientRequest:
         self.update_cookies(cookies)
         self.update_content_encoding()
         self.update_auth(auth)
-
-        if files:
-            warnings.warn(
-                'files parameter is deprecated. use data instead',
-                DeprecationWarning)
-            if data:
-                raise ValueError(
-                    'data and files parameters are '
-                    'not supported at the same time.')
-            data = files
 
         self.update_body_from_data(data, skip_auto_headers)
         self.update_transfer_encoding()
